--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,34 +17,30 @@ concurrency:
 
 jobs:
   build:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Setup Node
+
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: '20'
+
       - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm ci && npm run build
+        run: npm ci
+
+      - name: Build the project
+        run: npm run build
         env:
           PUBLIC_URL: /visiting-nursing-station-finder
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: './build'
 
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
