--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4  # Node.js 20 を使用するバージョンに更新
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4  # Node.js 20 を使用するバージョンに更新
         with:
           node-version: '20'
 
@@ -36,7 +36,7 @@ jobs:
           PUBLIC_URL: /visiting-nursing-station-finder
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-artifact@v4  # 最新バージョンに更新
         with:
           path: './build'
 
@@ -46,4 +46,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v2  # Node.js 20 を使用するバージョンがリリースされているか確認してください
